# dqcsim

./: .dockerignore  .drone.yml  .gitignore  .travis.yml  404.html  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Dockerfile  Doxyfile  Makefile  Makefile.toml  README.md  azure-pipelines.yml  build.rs  codecov.yml  dqcsimConfig.cmake.in  index.html  one-liners.md  print.html  release.html  searchindex.js  searchindex.json  setup.cfg  setup.py  test.py
bindings/: Cargo.toml  build.rs
bindings/src/: api_state.rs  lib.rs  util.rs
cli/: index.html
cpp/: CMakeLists.txt  README.md
cpp/examples/: Makefile  README.md
cpp/examples/plugin-class/: Makefile
cpp/examples/sim-hello/: Makefile
cpp/examples/sim-null/: .gitignore  Makefile  main.cpp
cpp/include/: dqcsim  dqcsim.hpp
cpp/include/dqcsim_bits/: arb_builder.hpp  log.hpp  main.hpp  wrap.hpp
cpp/test/: README.md  test2.cpp
cpp/test/raw/: arb.cpp  cdqcsim.cpp  error.cpp  gate.cpp  handle.cpp  mm.cpp  mset.cpp  plugin_gates.cpp  plugin_random.cpp  qbset.cpp  sim_new.cpp  sim_special_start.cpp  tcfg.cpp
cpp/test/raw_c/: arb.cpp  cdqcsim.cpp  cmd.cpp  cq.cpp  gate.cpp  meas.cpp  mm.cpp  pcfg.cpp  pdef.cpp  plugin_alloc_free.cpp  plugin_gates.cpp  plugin_init_drop_log.cpp  plugin_random.cpp  qbset.cpp  scfg.cpp  sim_arbs.cpp  sim_host.cpp  sim_special_start.cpp  util.h
cpp/test/wrap/: arb.cpp  cmd.cpp  cq.cpp  examples.cpp  gate.cpp  gm.cpp  handle.cpp  matrix.cpp  meas.cpp  mset.cpp  qubits.cpp  util.hpp
cpp/test_cpp/: CMakeLists.txt  test2.cpp
cpp/test_raw/: gate.cpp
cpp/test_raw_c/: CMakeLists.txt  arb.cpp  cmd.cpp  cq.cpp  error.cpp  gate.cpp  handle.cpp  meas.cpp  mset.cpp  pcfg.cpp  qbset.cpp  scfg.cpp  sim_arbs.cpp  sim_host.cpp  sim_special_start.cpp  tcfg.cpp
dqcsim/: Cargo.toml
dqcsim-api/: Cargo.toml  Makefile  Makefile.toml  build.rs  dqcsim.i  test_callbacks.py  test_matrix.py  trailer.inc
dqcsim-api/cpp/: CMakeLists.txt  Makefile
dqcsim-api/cpp/include/: dqcsim.hpp
dqcsim-api/cpp/test_lib/: CMakeLists.txt  test2.cpp
dqcsim-api/cpp/test_raw/: CMakeLists.txt  arb.cpp  cmd.cpp  cq.cpp  error.cpp  gate.cpp  handle.cpp  meas.cpp  mset.cpp  pcfg.cpp  pdef.cpp  plugin_gates.cpp  plugin_init_drop_log.cpp  plugin_random.cpp  qbset.cpp  scfg.cpp  sim_arbs.cpp  sim_host.cpp  sim_init_drop_log.cpp  sim_new.cpp  sim_random.cpp  tcfg.cpp  test1.cpp  util.h
dqcsim-api/py/: .gitignore  add_swig_directives.py  setup.py
dqcsim-api/py/dqcsim/: __init__.py
dqcsim-api/py/dqcsim/arbdata/: __init__.py
dqcsim-api/py/dqcsim/common/: __init__.py  arb.py  arbcmd.py  arbdata.py  cmd.py  cq.py  handle.py  meas.py  qbset.py
dqcsim-api/py/dqcsim/host/: __init__.py
dqcsim-api/py/dqcsim/plugin/: __init__.py
dqcsim-api/py/src/: __init__.py
dqcsim-api/py/tests/: test_arb.py  test_arbcmd.py  test_arbdata.py  test_cmd.py  test_cq.py  test_handle.py  test_integration.py  test_mset.py  test_qbset.py
dqcsim-api/src/: accel.rs  api_state.rs  arb.rs  cmd.rs  ctypes.rs  dqcsim_state.rs  handle.rs  lib.rs  pcfg.rs  scfg.rs  test_callbacks.rs  util.rs
dqcsim-cli/: Cargo.toml  Makefile  Makefile.toml  build.rs
dqcsim-cli/examples/: null-backend.rs  null-frontend.rs  null-operator.rs  plugin.rs
dqcsim-cli/src/: main.rs
dqcsim-cli/src/arg_parse/: ascii.txt  help-template.txt  long-help-template.txt  mod.rs  opts.rs  parse.rs  plugins.rs  usage.txt
dqcsim-cli/tests/: cli.rs
dqcsim-core/: Cargo.toml
dqcsim-core/src/: lib.rs  plugin.rs
dqcsim-core/src/ipc/: message.rs
dqcsim-core/src/plugin/: config.rs  mod.rs
dqcsim-core/src/simulator/: mod.rs
dqcsim-log/: Cargo.toml  README.md
dqcsim-log/src/: channel.rs  ipc.rs  lib.rs  local.rs  proxy.rs  record.rs  router.rs  stdio.rs  tee_file.rs  thread.rs
dqcsim-plugin/: Cargo.toml
dqcsim-plugin/src/: main.rs
dqcsim/src/: error.rs  lib.rs  main.rs  simulation.rs  simulator.rs
dqcsim/src/common/: channel.rs  error.rs  ipc.rs  mod.rs  protocol.rs
dqcsim/src/common/ipc/: connection.rs  mod.rs  plugin.rs  simulator.rs
dqcsim/src/common/log/: callback.rs  mod.rs  proxy.rs  router.rs  stdio.rs  tee_file.rs  thread.rs
dqcsim/src/common/protocol/: arb_cmd.rs  arb_data.rs  gate.rs  gatestream_down.rs  gatestream_up.rs  mod.rs  plugin_metadata.rs  plugin_to_log_thread.rs  plugin_to_simulator.rs  qubit_ref.rs  simulator_to_plugin.rs
dqcsim/src/common/types/: arb_cmd.rs  cycle.rs  gate.rs  measurement.rs  mod.rs  plugin_metadata.rs  plugin_type.rs  qubit_ref.rs  sequence_number.rs
dqcsim/src/configuration/: arb_cmd.rs  arb_data.rs  mod.rs  plugin.rs  seed.rs  simulator.rs  stream_capture_mode.rs  timeout.rs
dqcsim/src/host/: ipc.rs  mod.rs  simulation.rs  simulator.rs
dqcsim/src/host/configuration/: arb_cmd.rs  arb_data.rs  mod.rs  plugin.rs  plugin_log.rs  plugin_process.rs  plugin_thread.rs  reproduction_path_style.rs  simulator.rs  timeout.rs
dqcsim/src/host/plugin/: mod.rs  process.rs  thread.rs
dqcsim/src/host/reproduction/: host_call.rs  mod.rs  path_style.rs
dqcsim/src/ipc/: connection.rs  mod.rs  plugin.rs  simulator.rs
dqcsim/src/log/: local.rs  mod.rs  proxy.rs  router.rs  sender.rs  stdio.rs  tee_file.rs  thread.rs
dqcsim/src/plugin/: config.rs  connection.rs  context.rs  definition.rs  ipc.rs  log.rs  mod.rs  process.rs  state.rs  thread.rs
dqcsim/src/protocol/: channel.rs  ipc.rs  message.rs  mod.rs
dqcsim/src/reproduction/: host_call.rs  mod.rs  path_style.rs
dqcsim/src/simulator/: mod.rs
dqcsim/src/util/: ipc.rs  mod.rs  signal.rs
dqcsim/tests/: plugin.rs  quantum.rs  simulation.rs
examples/cmake-config/project/: CMakeLists.txt
examples/cmake-fetchcontent/project/: CMakeLists.txt
examples/cmake-simple/project/: CMakeLists.txt
examples/cmake/project/: CMakeLists.txt
foreign/host/shim/: .gitignore  Cargo.toml  Makefile  Makefile.toml  build.rs  dqcshost.i  setup.py
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
rust/src/bindings/: api_state.rs  ctypes.rs  gatemap.rs  header_c.inc  header_cpp.inc  mod.rs  trailer.inc  util.rs
rust/src/core/: mod.rs
rust/tests/: cli.rs  core.rs
rust/tools/: build.rs
(+1319 files in other folders)
