[package]
name = "dqcsim"
version = "0.1.0"
authors = ["Quantum Computer Architectures, Quantum & Computer Engineering, QuTech, Delft University of Technology"]
edition = '2018'
build = "build.rs"
description = "DQCsim: Delft Quantum Classical Simulator"
documentation = "http://docs.rs/dqcsim/"
homepage = "https://mbrobbel.github.io/dqcsim-rs/"
repository = "https://github.com/mbrobbel/dqcsim-rs"
readme = "README.md"
keywords = ["quantum", "simulation", "framework"]
categories = ["simulation", "science"]
license = "Apache-2.0"

[badges]
travis-ci = { repository = "mbrobbel/dqcsim-rs" }
codecov = { repository = "mbrobbel/dqcsim-rs" }

[workspace]
members = ["bindings", "lib/enum-variants", "lib/enum-variants-derive"]

[features]
default = ["cli", "null-plugins"]
cli = ["structopt", "ansi_term", "clap", "null-plugins"]
null-plugins = []
kcov = []

[dependencies]
enum-variants = { path = "lib/enum-variants" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.9"
serde_yaml = "0.8"
serde-transcode = "1.1"
crossbeam-channel = "0.3"
ipc-channel = "0.11"
whoami = "0.5"
pathdiff = "0.1"
lazy_static = "1.3"
ref_thread_local = "0.0"
failure = "0.1"
term = "0.5"
humantime = "1.2"
rand = "0.6"
rand_chacha = "0.1"
num-complex = "0.2"
structopt = { version = "0.2", optional = true }
ansi_term = { version = "0.11", optional = true }
clap = { version = "2.33", optional = true }

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0"
escargot = "0.5"

[profile.release]
lto = true
