[package]
name = "dqcsim-bindings"
version = "0.1.0"
authors = ["Quantum Computer Architectures, Quantum & Computer Engineering, QuTech, Delft University of Technology"]
edition = '2018'
build = "build.rs"
description = "C bindings for dqcsim"
documentation = "http://docs.rs/dqcsim-c/"
homepage = "https://mbrobbel.github.io/dqcsim-rs/"
repository = "https://github.com/mbrobbel/dqcsim-rs"
readme = "README.md"
keywords = ["quantum", "simulation", "framework"]
categories = ["simulation", "science"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
dqcsim = { version = "0.1.0", path = "../" }
libc = "0.2"
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-complex = "0.2"

[build-dependencies]
cbindgen = "0.8"
