[package]
name = "dqcsim-api"
version = "0.1.0"
authors = ["Jeroen van Straten <jeroen.van.straten@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
dqcsim = { path = "../dqcsim" }
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-complex = "0.2"

[build-dependencies]
cbindgen = "0.8"
