[package]
name = "dqcsim-cli"
version = "0.1.0"
authors = ["Matthijs Brobbel", "Jeroen van Straten"]
edition = "2018"
build = "build.rs"

[dependencies]
dqcsim = { path = "../dqcsim" }
enum-variants = { path = "../lib/enum-variants" }

structopt = "0.2"
signal-hook = "0.1"
failure = "0.1"
ansi_term = "0.11"
serde = { version = "1.0", features = ["derive"] }
clap = "~2.33.0"
