[package]
name = "dqcsim-cli"
version = "0.1.0"
authors = ["Matthijs Brobbel", "Jeroen van Straten"]
edition = "2018"
build = "build.rs"

[dependencies]
dqcsim = { path = "../dqcsim" }
enum-variants = { path = "../lib/enum-variants" }

structopt = "0.2"
failure = "0.1"
ansi_term = "0.11"
clap = "~2.33.0"
