[package]
name = "dqcsim-cli"
version = "0.1.0"
authors = ["Matthijs Brobbel", "Jeroen van Straten"]
edition = "2018"
build = "build.rs"

[dependencies]
dqcsim = { path = "../dqcsim" }
enum-variants = { path = "../lib/enum-variants" }

structopt = "0.2"
failure = "0.1"
ansi_term = "0.11"
clap = "~2.33.0"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0"
escargot = "0.5.0"
lazy_static = "1.3.0"
rand = "0.6"

[features]
kcov = []
