[package]
name = "dqcsim-core"
version = "0.1.0"
authors = ["Matthijs Brobbel <m1brobbel@gmail.com>"]
edition = "2018"

[dependencies]
# Logging
log = "0.4"
dqcsim-log = { path = "../dqcsim-log" }

# Serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Communication channels
crossbeam-channel = "0.3"
ipc-channel = "0.11"
