[package]
name = "dqcsim-log"
version = "0.1.0"
authors = ["Matthijs Brobbel", "Jeroen van Straten"]
edition = "2018"

[dependencies]
enum-variants = { path = "../enum-variants" }

# error management
failure = "0.1"

# serialize/deserialize
serde = { version = "1.0", features = ["derive"] }

# channels
crossbeam-channel = "0.3"
ipc-channel = "0.11"

# output
term = "0.5"
humantime = "1.2"

lazy_static = "1.3"
ref_thread_local = "0.0"
