[package]
name = "dqcsim-plugin"
version = "0.1.0"
authors = ["Matthijs Brobbel <m1brobbel@gmail.com>"]
edition = "2018"

[dependencies]
dqcsim-log = { path = "../dqcsim-log" }

log = "0.4"
# log = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
ipc-channel = { version = "0.11", features = ["async"] }
