[package]
name = "dqcsim"
version = "0.1.0"
authors = ["Matthijs Brobbel <m1brobbel@gmail.com>"]
edition = "2018"

[dependencies]
# serialize/deserialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# channels
crossbeam-channel = "0.3"
ipc-channel = "0.11"

# utils
signal-hook = "0.1"

# log
log = "0.4"
term = "0.5"
humantime = "1.2"

# config
structopt = "0.2"
