[package]
name = "dqcsim"
version = "0.1.0"
authors = ["Matthijs Brobbel", "Jeroen van Straten"]
edition = "2018"

[dependencies]
# logging
dqcsim-log = { path = "../dqcsim-log" }

# serialize/deserialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"

# channels
crossbeam-channel = "0.3"
ipc-channel = "0.11"

# utils
signal-hook = "0.1"

# config
structopt = "0.2"

# error handling
failure = "0.1"

enum-variants = { path = "../enum-variants" }
pathdiff = "0.1"
whoami = "0.1"
rand = "0.6"
