[package]
name = "dqcsim"
version = "0.1.0"
authors = ["Matthijs Brobbel", "Jeroen van Straten"]
edition = "2018"

[dependencies]
enum-variants = { path = "../lib/enum-variants" }

# serialize/deserialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"

# channels
crossbeam-channel = "0.3"
ipc-channel = "0.11"

# utils
whoami = "0.5"
pathdiff = "0.1"
lazy_static = "1.3"
ref_thread_local = "0.0"

# config
structopt = "0.2"

# error handling
failure = "0.1"

# log output
term = "0.5"
humantime = "1.2"

# random
rand = "0.6"
