[package]
name = "dqcsim"
version = "0.0.5"
authors = ["Quantum Computer Architectures, Quantum & Computer Engineering, QuTech, Delft University of Technology"]
edition = '2018'
build = "tools/build.rs"
description = "DQCsim: Delft Quantum Classical Simulator"
documentation = "http://docs.rs/dqcsim/"
homepage = "https://mbrobbel.github.io/dqcsim/"
repository = "https://github.com/mbrobbel/dqcsim"
readme = "../README.md"
keywords = ["quantum", "simulation", "framework"]
categories = ["simulation", "science"]
license = "Apache-2.0"
default-run = "dqcsim"

[badges]
# travis-ci = { repository = "mbrobbel/dqcsim" }
codecov = { repository = "mbrobbel/dqcsim" }

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "dqcsim"
doc = false
required-features = ["cli"]

[[bin]]
name = "dqcsbenull"
doc = false
required-features = ["null-plugins"]

[[bin]]
name = "dqcsopnull"
doc = false
required-features = ["null-plugins"]

[[bin]]
name = "dqcsfenull"
doc = false
required-features = ["null-plugins"]

[features]
default = ["cli", "null-plugins"]
cli = ["structopt", "ansi_term", "clap", "git-testament"]
null-plugins = []
bindings = ["cbindgen", "libc"]

[dependencies]
strum = "0.16"
strum_macros = "0.16"
named_type = "0.2"
named_type_derive = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.10"
serde_yaml = "0.8"
serde-transcode = "1.1"
crossbeam-channel = "0.3"
ipc-channel = "0.12"
whoami = "0.6"
pathdiff = "0.1"
lazy_static = "1.4"
ref_thread_local = "0.0"
failure = "0.1"
term = "0.6"
humantime = "1.3"
rand = "0.7"
rand_chacha = "0.2"
num-complex = "0.2"
is_executable = "0.1"
backtrace = "0.3"
float-cmp = "0.5"
structopt = { version = "0.3", optional = true }
ansi_term = { version = "0.12", optional = true }
clap = { version = "2.33", optional = true }
git-testament = { version = "0.1", optional = true }
libc = { version = "0.2", optional = true }

[build-dependencies]
cbindgen = { version = "0.9", optional = true }
