[package]
name = "dqcsim"
version = "0.2.5"
authors = ["Quantum Computer Architectures, Quantum & Computer Engineering, QuTech, Delft University of Technology"]
edition = '2018'
build = "tools/build.rs"
description = "DQCsim: Delft Quantum Classical Simulator"
documentation = "http://docs.rs/dqcsim/"
homepage = "https://qe-lab.github.io/dqcsim/"
repository = "https://github.com/qe-lab/dqcsim"
readme = "../README.md"
keywords = ["quantum", "simulation", "framework"]
categories = ["simulation", "science"]
license = "Apache-2.0"
default-run = "dqcsim"
include = ["**/*.rs"]

[badges]
codecov = { repository = "qe-lab/dqcsim" }

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "dqcsim"
doc = false
required-features = ["cli"]

[[bin]]
name = "dqcsbenull"
path = "src/bin/null/backend.rs"
doc = false
required-features = ["null-plugins"]

[[bin]]
name = "dqcsopnull"
path = "src/bin/null/operator.rs"
doc = false
required-features = ["null-plugins"]

[[bin]]
name = "dqcsfenull"
path = "src/bin/null/frontend.rs"
doc = false
required-features = ["null-plugins"]

[features]
default = []
cli = ["structopt", "ansi_term", "clap", "git-testament"]
null-plugins = []
bindings = ["cbindgen", "libc", "regex", "lazy_static"]

[dependencies]
strum = "0.19"
strum_macros = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
serde_yaml = "0.8"
serde-transcode = "1.1"
crossbeam-channel = "0.4"
ipc-channel = "0.14"
whoami = "0.9"
pathdiff = "0.2"
lazy_static = "1.4"
ref_thread_local = "0.0"
failure = "0.1"
term = "0.6"
humantime = "2.0"
rand = "0.7"
rand_chacha = "0.2"
num-complex = "0.3"
is_executable = "0.1"
backtrace = "0.3"
float-cmp = "0.8"
integer-sqrt = "0.1"
structopt = { version = "0.3", optional = true }
ansi_term = { version = "0.12", optional = true }
clap = { version = "2.33", optional = true }
git-testament = { version = "0.1", optional = true }
libc = { version = "0.2", optional = true }

[build-dependencies]
cbindgen = { version = "0.14", optional = true }
regex = { version = "1", optional = true }
lazy_static = { version = "1.4", optional = true }
